force-app/main/default/objects/Custom_Trade_Request__c/Custom_Trade_Request__c.object-meta.xml
<CustomObject>
    <label>Custom Trade Request</label>
    <pluralLabel>Custom Trade Requests</pluralLabel>
    <nameField>
        <displayFormat>CTR-{0000}</displayFormat>
        <label>Trade Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>