force-app/main/default/objects/Custom_Trade_Request__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <required>true</required>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>