force-app/main/default/objects/Custom_Trade_Request__c/fields/Approval_Work_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Work_Item_Id__c</fullName>
    <label>Approval Work Item Id</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
</CustomField>