force-app/main/default/objects/Custom_Trade_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomTradeRequestsAsApprover</relationshipName>
    <relationshipLabel>Custom Trade Requests (Approver)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>