force-app/main/default/objects/Custom_Trade_Request__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>CustomTradeRequests</relationshipName>
    <relationshipLabel>Custom Trade Requests</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>