force-app/main/default/objects/Custom_Trade_Request__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>