force-app/main/default/objects/Custom_Trade_Request__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <type>LongTextArea</type>
    <length>1024</length>
</CustomField>