force-app/main/default/objects/Custom_Trade_Request__c/fields/RM__c.field-meta.xml
<CustomField>
    <fullName>RM__c</fullName>
    <label>RM</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomTradeRequestsAsRM</relationshipName>
    <relationshipLabel>Custom Trade Requests (RM)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>