force-app/main/default/objects/Custom_Trade_Request__c/fields/Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Id__c</fullName>
    <label>Slack Channel Id</label>
    <type>Text</type>
    <length>80</length>
</CustomField>